name:
  list-t
version:
  0.1.0
synopsis:
  ListT done right
description:
  A correct implementation of the list monad-transformer.
  Useful for streaming of mutable datastructures.
  E.g., see <http://hackage.haskell.org/package/stm-containers "stm-containers">.
category:
  Data Structures, Control, Monad, Data
homepage:
  https://github.com/nikita-volkov/list-t 
bug-reports:
  https://github.com/nikita-volkov/list-t/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2014, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/list-t.git


library
  hs-source-dirs:
    library
  other-modules:
    ListT.Prelude
  exposed-modules:
    ListT
  build-depends:
    -- debugging:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    mmorph == 1.0.*,
    transformers == 0.4.*,
    base-prelude == 0.1.*
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010


test-suite api-tests
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    executables
  main-is:
    APITests.hs
  build-depends:
    list-t,
    HTF == 0.11.*,
    placeholders == 0.1.*,
    mtl-prelude == 0.1.*,
    base-prelude >= 0.1.3 && < 0.2
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
